Attached the unboundid-maven-plugin.